[gd_scene load_steps=7 format=2]

[ext_resource path="res://Codes/Settings.gd" type="Script" id=1]
[ext_resource path="res://Tryout for theme.tres" type="Theme" id=2]

[sub_resource type="Theme" id=1]
Button/colors/font_color = Color( 0, 0.929412, 1, 1 )
Button/colors/font_color_disabled = Color( 0, 0.929412, 1, 1 )
Button/colors/font_color_focus = Color( 0, 0.929412, 1, 1 )
Button/colors/font_color_hover = Color( 0, 0.0627451, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
CheckButton/colors/font_color = Color( 1, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 1, 1, 1, 0.2 )
CheckButton/colors/font_color_focus = Color( 1, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 1, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 1, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0.592157, 0.0235294, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = null
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null

[sub_resource type="Animation" id=2]
resource_name = "Muted"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ColorRect/Sound:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Muted" ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ColorRect/Sound:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Sound On" ]
}

[sub_resource type="Animation" id=4]
resource_name = "Unmuted"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ColorRect/Sound:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Sound On" ]
}

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.5
margin_top = -80.0
margin_bottom = 80.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 256.0
color = Color( 0, 0, 0, 1 )

[node name="Sound" type="CheckButton" parent="VBoxContainer/ColorRect"]
margin_top = 4.0
margin_right = 256.0
margin_bottom = 44.0
theme = SubResource( 1 )
pressed = true
text = "Sound On"
align = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 256.0
margin_bottom = 68.0
text = "Volume"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 256.0
margin_bottom = 93.0
tick_count = 11
ticks_on_borders = true

[node name="Keys" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 256.0
margin_bottom = 112.0
theme = ExtResource( 2 )
text = "Control Setup"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 256.0
margin_bottom = 136.0
theme = ExtResource( 2 )
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Muted = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Unmuted = SubResource( 4 )

[connection signal="pressed" from="VBoxContainer/ColorRect/Sound" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Keys" to="." method="_on_Keys_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
